tools/tests/ui/fail/l1099.cnf
// Test file for error code: L1099
// Expected error: Underflow AUDIO-WAV character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
